# janett.chat

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.local.json
Formula/: janett.rb
docs/: HOMEBREW_PUBLISHING.md  features.md
ink-app/: PROGRESS.md  package-lock.json  package.json  readme.md  test.tsx
ink-app/source/: ai.ts  app.tsx  cli.tsx  config.ts  types.ts
ink-app/source/components/: ApiKeyInput.tsx  ChapterList.tsx  ChapterView.tsx  ChatView.tsx  Header.tsx  Help.tsx  Input.tsx  Loading.tsx  ModelSelect.tsx  ProviderSelect.tsx  Welcome.tsx
src/janett/: __init__.py  __main__.py  chat.py  cli.py  config.py  tutorial.py  ui.py
tests/: conftest.py  test_chat.py  test_config.py  test_tutorial.py
