[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "janett"
version = "0.2.0"
description = "Interactive tutorial generator and chat CLI powered by local LLMs (Ollama) or OpenAI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Janett AI", email = "hello@janett.ai" }
]
keywords = [
    "tutorial",
    "learning",
    "ollama",
    "openai",
    "chatgpt",
    "llm",
    "terminal",
    "cli",
    "ai",
    "education",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "tiktoken>=0.5.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
janett = "janett.cli:main"

[project.urls]
Homepage = "https://github.com/janettai/janett.chat"
Documentation = "https://github.com/janettai/janett.chat#readme"
Repository = "https://github.com/janettai/janett.chat"
Issues = "https://github.com/janettai/janett.chat/issues"
Changelog = "https://github.com/janettai/janett.chat/releases"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/janett"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
